possible fix for mobile gap

--- a/app/assets/stylesheets/welcome.css.scss
+++ b/app/assets/stylesheets/welcome.css.scss
@@ -5,6 +5,7 @@ section {
   min-height: 100vh;
   width: 100%;
   width: 100vw;
+  overflow: hidden;
 }
 .module:last-child {
   margin-bottom: 0;
